Fixed announcements displaying overflow on long words.

--- a/src/modules/views/billing/public/stylesheets/shared.css
+++ b/src/modules/views/billing/public/stylesheets/shared.css
@@ -255,6 +255,9 @@ body > aside > div{
     margin-inline: 3px;
     filter: brightness(0.9);
 }
+#announcementsWrapper > div > p{
+    word-break: break-all;
+}
 #announcementsWrapper > div:hover{
     filter: brightness(1);
 }
